--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @import "../../node_modules/@mdxeditor/editor/dist/style.css"; */
