--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,10 @@
 @tailwind utilities;
 
 /* @import "../../node_modules/@mdxeditor/editor/dist/style.css"; */
+
+.prose code::before {
+  content: none !important;
+}
+.prose code::after {
+  content: none !important;
+}
